--- a/views/partials/showProduct.ejs
+++ b/views/partials/showProduct.ejs
@@ -1,7 +1,18 @@
-<ul class="product-list">
-  <li><%-prod.name%></li>
-  <li><%-prod.description%></li>
-  <li><%-prod.price%></li>
-  <li><%-prod.quantity%></li>
-  <li><%-prod.category%></li>
-</ul>
+<tr>
+  <th>ID</th>
+  <th>Name</th>
+  <th>Description</th>
+  <th>Price</th>
+  <th>Quantity</th>
+  <th>Category</th>
+</tr>
+<% data.forEach(function (item) { %>
+<tr>
+  <td><%- item.id %></td>
+  <td><%- item.name %></td>
+  <td><%- item.description %></td>
+  <td><%- item.price %></td>
+  <td><%- item.quantity %></td>
+  <td><%- item.category %></td>
+</tr>
+<% }) %>
