feat: add delete route for product table

--- a/views/partials/showProduct.ejs
+++ b/views/partials/showProduct.ejs
@@ -14,5 +14,8 @@
   <td><%- item.price %></td>
   <td><%- item.quantity %></td>
   <td><%- item.category %></td>
+  <td>
+    <button><a href="/delete/<%- item.id %>">Delete</a></button>
+  </td>
 </tr>
 <% }) %>
