--- a/views/form/categoryForm.ejs
+++ b/views/form/categoryForm.ejs
@@ -1,4 +1,4 @@
-<form action="/dashboard/category" method="POST">
+<form action="/dashboard/category/add-category" method="POST">
   <input required type="text" placeholder="Category" name="category" />
   <button type="submit">Add</button>
 </form>
