--- a/views/form/productForm.ejs
+++ b/views/form/productForm.ejs
@@ -1,4 +1,4 @@
-<form action="/dashboard/product" method="POST">
+<form action="/dashboard/product/add-product" method="POST">
   <input required type="text" placeholder="Name" name="name" />
   <textarea name="description" id="description"></textarea>
   <input required type="number" name="price" placeholder="Price" />
