--- a/views/form/productForm.ejs
+++ b/views/form/productForm.ejs
@@ -1,12 +1,21 @@
 <form action="/dashboard/product/add-product" method="POST">
   <input required type="text" placeholder="Name" name="name" />
-  <textarea name="description" id="description"></textarea>
+
+  <textarea
+    name="description"
+    id="description"
+    placeholder="Description"
+  ></textarea>
+
   <input required type="number" name="price" placeholder="Price" />
+
   <input required type="number" name="quantity" placeholder="Quantity" />
+
   <select name="category" id="category">
     <% data.forEach(function (category) { %>
     <option value="<%- category.category %>"><%- category.category %></option>
     <% }) %>
   </select>
+
   <button type="submit">Add</button>
 </form>
