--- a/views/partials/showProduct.ejs
+++ b/views/partials/showProduct.ejs
@@ -15,6 +15,11 @@
   <td><%- item.quantity %></td>
   <td><%- item.category %></td>
   <td>
+    <form action="/update/<%- item.id %>" method="GET">
+      <button type="submit">Update</button>
+    </form>
+  </td>
+  <td>
     <form action="/delete/<%- item.id %>" method="POST">
       <button type="submit">Delete</button>
     </form>
