--- a/views/form/categoryUpdateForm.ejs
+++ b/views/form/categoryUpdateForm.ejs
@@ -1,4 +1,11 @@
 <form action="/update-category/<%- category.id %>" method="POST">
-  <input required type="text" placeholder="Category" name="category" />
-  <button type="submit">Add</button>
+  <input type="hidden" name="id" value="<%- category.id %>" />
+  <input
+    required
+    type="text"
+    placeholder="Category"
+    name="category"
+    value="<%- category.category %>"
+  />
+  <button type="submit">Update</button>
 </form>
