fix: fix the ORDER BY queary when showing search results

--- a/views/form/productUpdateForm.ejs
+++ b/views/form/productUpdateForm.ejs
@@ -8,8 +8,7 @@
     value="<%- item.name %>"
   />
 
-  <textarea name="description" id="description" placeholder="Description">
-  <%- item.description %></textarea
+  <textarea name="description" id="description" placeholder="Description"><%-item.description%></textarea
   >
   <input
     required
