--- a/views/main/onView.ejs
+++ b/views/main/onView.ejs
@@ -8,9 +8,7 @@
       value="<%- content.query.name %>"
     />
 
-    <textarea name="description" id="description" placeholder="Description">
-  <%- content.query.description %>
-  </textarea
+    <textarea name="description" id="description" placeholder="Description"><%- content.query.description %></textarea
     >
 
     <input type="number" name="price" placeholder="Price" value = "<%- content.query.price %>"/>
