--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,8 @@
+@import url("./sidebar.css");
+@import url("./mainContent.css");
+@import url("./table.css");
+/* @import url("./productForm.css"); */
+
 * {
   margin: 0px;
   padding: 0px;
@@ -7,20 +12,7 @@
 .container {
   display: flex;
   height: 100vh;
-}
-
-.sidebar {
-  background-color: gray;
-  width: 400px;
-}
-
-.main {
-  /* background-color: red; */
-  flex-grow: 1;
-  display: flex;
-  overflow-y: auto;
-  justify-content: center;
-  flex-direction: column;
+  background-color: black;
 }
 
 li {
