--- a/views/main/onView.ejs
+++ b/views/main/onView.ejs
@@ -1,6 +1,6 @@
 <div class="input-header">
   <% if (content.name === 'product') { %>
-  <form action="/dashboard/product-search" method="post">
+  <form action="/dashboard/product-search" method="post" class="table-search-bar">
     <input
       type="text"
       placeholder="Name"
