--- a/views/form/productForm.ejs
+++ b/views/form/productForm.ejs
@@ -1,21 +1,67 @@
-<form action="/dashboard/product/add-product" method="POST">
-  <input required type="text" placeholder="Name" name="name" />
-
-  <textarea
-    name="description"
-    id="description"
-    placeholder="Description"
-  ></textarea>
-
-  <input required type="number" name="price" placeholder="Price" />
-
-  <input required type="number" name="quantity" placeholder="Quantity" />
-
-  <select name="category_id" id="category">
-    <% data.forEach(function (category) { %>
-    <option value="<%- category.id %>"><%- category.category %></option>
-    <% }) %>
-  </select>
-
-  <button type="submit">Add</button>
+<form
+  class="product-form"
+  action="/dashboard/product/add-product"
+  method="POST"
+>
+  <table>
+    <thead>
+      <tr>
+        <th>Name</th>
+        <th>Description</th>
+        <th>Price</th>
+        <th>Quantity</th>
+        <th>Category</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>
+          <input
+            class="form-input"
+            required
+            type="text"
+            placeholder="Name"
+            name="name"
+          />
+        </td>
+        <td>
+          <textarea
+            class="form-textarea"
+            name="description"
+            id="description"
+            placeholder="Description"
+          ></textarea>
+        </td>
+        <td>
+          <input
+            class="form-input"
+            required
+            type="number"
+            name="price"
+            placeholder="Price"
+          />
+        </td>
+        <td>
+          <input
+            class="form-input"
+            required
+            type="number"
+            name="quantity"
+            placeholder="Quantity"
+          />
+        </td>
+        <td>
+          <select class="form-select" name="category_id" id="category">
+            <% data.forEach(function (category) { %>
+            <option value="<%- category.id %>"><%- category.category %></option>
+            <% }) %>
+          </select>
+        </td>
+        <td>
+          <button class="form-button" type="submit">Add</button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 </form>
