--- a/views/main/onView.ejs
+++ b/views/main/onView.ejs
@@ -32,17 +32,17 @@
     </select>
     <button type="submit">Search</button>
   </form>
-  <button><a href="/dashboard/product/add-product">Add Product</a></button>
+  <button class="add-product-btn"><a href="/dashboard/product/add-product">Add Product</a></button>
   <% } else { %>
   <form action="/dashboard/category-search" method="post">
-    <input required type="text" name="category" id="category" value="<%-content.query.category %>"/>
+    <input placeholder="Category" required type="text" name="category" id="category" value="<%-content.query.category %>"/>
     <select name="filter" id="filter">
       <option value="exact-match" <% if (content.query.filter === 'exact-match') { %> selected <% } %>>Exact match</option>
       <option value="any-match" <% if (content.query.filter === 'any-match') { %> selected <% } %>>Any match</option>
     </select>
     <button type="submit">Search</button>
   </form>
-  <button><a href="/dashboard/category/add-category">Add Category</a></button>
+  <button class="add-category-btn"><a href="/dashboard/category/add-category">Add Category</a></button>
   <% } %>
 </div>
 
