--- a/views/partials/showCategory.ejs
+++ b/views/partials/showCategory.ejs
@@ -1,19 +1,19 @@
-<tr>
-  <th>ID</th>
+<tr class="column-name">
+  <th class="id">ID</th>
   <th>Category</th>
   <th>Actions</th>
 </tr>
 <% data.forEach(function (item) { %>
-<tr>
-  <td><%- item.id %></td>
+<tr class="column-data">
+  <td class="id"><%- item.id %></td>
   <td><%- item.category %></td>
-  <td>
+  <td class="action-column">
     <form action="/update-category/<%- item.id %>" method="GET">
-      <button type="submit">Update</button>
+      <button type="submit">Edit</button>
     </form>
 
     <form action="/delete-category/<%- item.id %>" method="POST">
-      <button type="submit">Delete</button>
+      <button type="submit">Del</button>
     </form>
   </td>
 </tr>
