--- a/views/partials/showProduct.ejs
+++ b/views/partials/showProduct.ejs
@@ -16,13 +16,15 @@
   <td><%- item.quantity %></td>
   <td><%- item.category %></td>
   <td class="action-column">
-    <form action="/update-product/<%- item.id %>" method="GET">
-      <button type="submit">Edit</button>
-    </form>
+    <div class="action-container">
+      <form action="/update-product/<%- item.id %>" method="GET">
+        <button class="edit-btn" type="submit">Edit</button>
+      </form>
 
-    <form action="/delete-product/<%- item.id %>" method="POST">
-      <button type="submit">Del</button>
-    </form>
+      <form action="/delete-product/<%- item.id %>" method="POST">
+        <button class="delete-btn" type="submit">Del</button>
+      </form>
+    </div>
   </td>
 </tr>
 <% }) %>
