--- a/views/form/categoryUpdateForm.ejs
+++ b/views/form/categoryUpdateForm.ejs
@@ -24,7 +24,7 @@
             class="form-input"
           />
         </td>
-        <td>
+        <td class="cat-update-column">
           <button type="submit" class="form-button">Update</button>
         </td>
       </tr>
