--- a/views/form/categoryForm.ejs
+++ b/views/form/categoryForm.ejs
@@ -21,7 +21,7 @@
             class="form-input"
           />
         </td>
-        <td>
+        <td class="cat-update-column">
           <button type="submit" class="form-button">Add</button>
         </td>
       </tr>
