--- a/views/main/onView.ejs
+++ b/views/main/onView.ejs
@@ -27,8 +27,8 @@
     <button class="add-product-btn"><a href="/dashboard/product/add-product">Add Product</a></button>
   <% } else { %>
     <form action="/dashboard/category-search" method="post">
-      <input placeholder="Category" required type="text" name="category" id="category" value="<%-content.query.category %>"/>
-      <select name="filter" id="filter">
+      <input placeholder="Category" required type="text" name="category" id="category" value="<%-content.query.category %>" class="adsf"/>
+      <select name="filter" id="filter" class="opt-cat">
         <option value="exact-match" <% if (content.query.filter === 'exact-match') { %> selected <% } %>>Exact match</option>
         <option value="any-match" <% if (content.query.filter === 'any-match') { %> selected <% } %>>Any match</option>
       </select>
